# ElectricPlush

./: CMakeLists.txt  Cargo.toml  ElectricPlush.kdev4  LICENSE  README.md  app.cpp  app.hpp  camera.cpp  camera.hpp  complain.hpp  cube.cpp  cube.hpp  default_shaders.cpp  default_shaders.hpp  event_handler.hpp  gl_error.cpp  gl_error.hpp  gl_object.cpp  gl_ref_object.hpp  main.cpp  navigation_event_handler.cpp  navigation_event_handler.hpp  scene_object.cpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp  vertex_format.hpp
_ATTIC/: README.md
_ATTIC/old-cpp-code/: CMakeLists.txt  app.hpp  camera.cpp  complain.cpp  event_handler.cpp  gl.hpp  gl_object.hpp  main.cpp  scene_object.hpp  shader.cpp  texture.hpp  uniform.cpp  uniform.hpp  vao.hpp  vbo.hpp
_ATTIC/old-cpp-code/shaders/: lighted_color.fsh  transform_coord_color_normal.vsh  trivial_color.fsh
shaders/: lighted_color.fsh  transform_coord_color.vsh  transform_coord_color_normal.vsh  trivial_color.fsh  trivial_coord_color.vsh
src/: app.rs  camera.rs  cube.rs  main.rs  render_task.rs  renderer.rs  shader.wgsl  vertex.rs
